syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "proto/google/type/date.proto";
import "proto/google/type/latlng.proto";

package user;

option go_package="proto-course/protogen/basic"; // mudan√ßa nome para basic

enum Gender {
    GENDER_UNSPECIFIED = 0;
    GENDER_MALE = 1;
    GENDER_FEMALE = 2;
}

message Address {
    string street = 1;
    string city = 2;
    string country = 3;
    
    Coordinate coordinate = 16;

    message Coordinate {
        double latitude = 1;
        double longitude = 2;
    }
}

message PaperMail {
    string paper_mail_address = 1 [json_name = "paperl_mail_address"];
}

message InstantMessaging {
    string instant_messaging_product = 1 [json_name = "instant_messaging_product"];
    string instant_messaging_username = 2 [json_name = "instant_messaging_username"];
}

message SocialMedia {
    string social_media_platform = 1 [json_name = "social_media_platform"];
    string social_media_username = 2 [json_name = "social_media_username"];
}

message User {
    uint32 id = 1;
    string username = 2;
    bool is_active = 3 [json_name = "is_active"];
    bytes password = 4;

    repeated string emails = 16;
    Gender gender = 17;
    Address address = 18; // campo deve ser minusculo
    google.protobuf.Any communication_channel = 19 [json_name = "communication_channel"];

    oneof eletronic_comm_channel {
        SocialMedia social_media = 20 [json_name = "social_media"];
        InstantMessaging instant_messaging = 21 [json_name = "instant_messaging"];
    }

    map<string, uint32> skill_rating = 22 [json_name = "skill_rating"];

    google.protobuf.Timestamp last_login_timestamp = 23
    [json_name = "last_login_timestamp"];
    google.type.Date birth_date = 24 [json_name = "birth_date"];
    google.type.LatLng last_location = 25 [json_name = "last_location"];
}
