syntax = "proto3";

import "proto/basic/user.proto";

package usergroup;

option go_package="proto-course/protogen/basic";

message UserGroup {
    uint32 group_id = 1 [json_name = "group_id"];
    string group_name = 2 [json_name = "group_name"];
    repeated string roles = 3;
    repeated user.User users = 4;

    string description = 16;
}
